--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         background-repeat: no-repeat;
         background-position: center center;
         background-attachment: fixed;
-        background-color: #ffcf55;
+        background-color: #453b3a;
     }
 
     h1 {
@@ -121,6 +121,20 @@
 
         .title img {
             width: 400px;
+        }
+    }
+
+    @media screen and (max-width: 400px) {
+        .slide {
+            width: 300px;
+        }
+
+        iframe {
+            width: 300px;
+        }
+
+        body {
+            background-size: contain;
         }
     }
 
