--- a/index.html
+++ b/index.html
@@ -132,9 +132,11 @@
         iframe {
             width: 300px;
         }
+    }
 
+    @media screen and (max-width: 480px) and (orientation: portrait) {
         body {
-            background-size: contain;
+            background-image: url('background_moltres_portrait.jpg');
         }
     }
 
