--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
     .jumbotron {
         background: #2c2e2c;
         margin: 64px 0 0 0;
-        padding: 0 0 20px 0;
         opacity: 0.9;
     }
 
@@ -111,6 +110,10 @@
 
         iframe {
             width: 380px;
+        }
+
+        .title img {
+            width: 300px;
         }
     }
 
