Fixing responsiveness issues

--- a/index.html
+++ b/index.html
@@ -135,11 +135,19 @@
         iframe {
             width: 300px;
         }
+
+        .title img {
+            width: 300px;
+        }
     }
 
     @media screen and (max-width: 480px) and (orientation: portrait) {
         body {
             background-image: url('background_moltres_portrait.jpg');
+        }
+
+        .title img {
+            width: 300px;
         }
     }
 
