Fixing responsiveness issues

--- a/index.html
+++ b/index.html
@@ -146,6 +146,14 @@
             background-image: url('background_moltres_portrait.jpg');
         }
 
+        .slide {
+            width: 380px;
+        }
+
+        iframe {
+            width: 380px;
+        }
+
         .title img {
             width: 300px;
         }
