Fixing responsiness issues

--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
             width: 380px;
         }
 
+        .img-col {
+             width: 380px;           
+        }
+
         iframe {
             width: 380px;
         }
@@ -136,6 +140,10 @@
             width: 300px;
         }
 
+        .img-col {
+             width: 300px;           
+        }
+
         .title img {
             width: 300px;
         }
@@ -156,6 +164,10 @@
 
         .title img {
             width: 300px;
+        }
+
+        .img-col {
+             width: 380px;           
         }
     }
 
