Fixing responsiveness issues

--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
         .img-col {
              width: 300px;           
         }
+
+        .navbar .btn {
+            font-size: 14px;
+        }
     }
 
 </style>
@@ -259,7 +263,7 @@
         </div>      
     </div>
     <div class="container-fluid bg3 text-center">
-        <i class="creator-name">Créé par Rafael Pacheco</i>
+        <i class="creator-name">Rafael Pacheco©</i>
     </div>
     <script>
         $(document).ready(function(){
