Fixing responsiveness issues

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 
     .navbar {
         background: #2c2e2c;
-        opacity: 0.9;      
+        opacity: 0.9;   
     }
 
     .jumbotron {
         background: #2c2e2c;
-        margin: 64px 0 0 0;
+        margin: 61px 0 0 0;
         opacity: 0.9;
     }
 
@@ -47,6 +47,7 @@
 
     .navbar .btn {
         margin: 5px 5px 5px 5px;
+        font-size: 14px;
     }
     
     .bg1 {
@@ -76,14 +77,17 @@
 
     .title img {
         width: 600px;
+        margin: 0 auto 0 auto;
     }
 
     .slide {
         width: 600px;
+        margin: 0 auto 0 auto;
     }
 
     .img-col{
         height: 250px;
+        margin: 0 auto 0 auto;
     }
 
     .creator-name {
@@ -103,13 +107,29 @@
         color: #3b5998;
     }
 
-    @media screen and (max-width: 664px) {
-        .jumbotron {
-            margin: 112px 0 0 0;
+    @media screen and (max-width: 610px) {
+        .slide {
+             width: 440px;    
+        }
+
+        iframe {
+             width: 440px;    
         }
 
         .title img {
-            width: 400px;
+             width: 440px;    
+        }
+
+        .img-col {
+             width: 440px;           
+        }
+
+        .jumbotron {
+            margin: 106px 0 0 0;
+        }
+
+        .navbar .btn {
+            margin: 5px 10px 5px 10px;
         }
     }
 
@@ -119,23 +139,27 @@
         }
 
         .slide {
-            width: 300px;
+             width: 300px;    
         }
 
         iframe {
-            width: 300px;
+             width: 300px;    
         }
 
         .title img {
-            width: 300px;
+             width: 300px;    
         }
 
         .img-col {
              width: 300px;           
         }
 
+        .jumbotron {
+            margin: 106px 0 0 0;
+        }
+
         .navbar .btn {
-            font-size: 14px;
+            margin: 5px 10px 5px 10px;
         }
     }
 
