Fist public version

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
     .jumbotron {
         background: #2c2e2c;
-        margin: 61px 0 0 0;
+        margin: 60px 0 0 0;
+        padding: 20px 0 20px 0;
         opacity: 0.9;
     }
 
@@ -186,9 +187,9 @@
 
                 Tant les débutants, les amateurs que les joueurs semi-professionnels ont la possibilité de profiter à leur manière des évènements officiels organisés sous la supervision de Play! Pokémon, l’entité centrale basée aux États-Unis.<br><br>
 
-                Les joueurs sont répartis en trois catégories d’âges (junior, senior et master) pour permettre tant aux enfants qu’aux adultes de prendre plaisir dans leurs contextes compétitifs respectifs.<br><br>
+                Les joueurs sont répartis en trois catégories d’âge (junior, senior et master) pour permettre tant aux enfants qu’aux adultes de prendre plaisir dans leurs contextes compétitifs respectifs.<br><br>
 
-                Le circuit actuel comprend des ligues et des petits tournois organisés localement en Suisse, des tournois régionaux de haut niveau organisés dans les plus grandes villes du monde, des tournois internationaux tel que le championnat d’Europe et surtout le championnat du monde qui se déroule chaque été et permet de désigner les meilleurs joueurs du monde.
+                Le circuit actuel comprend des ligues et des petits tournois organisés localement en Suisse, des tournois régionaux de haut niveau organisés dans les plus grandes villes du monde, des tournois internationaux tels que le championnat d’Europe et surtout le championnat du monde qui se déroule chaque été et permet de désigner les meilleurs joueurs du monde.
 
                 Bien que les premières cartes Pokémon soient sorties il y a plus de 24 ans, le jeu compétitif est en constante croissance avec toujours plus de joueurs. Surfant sur la vague des eSports, Pokémon a récemment implémenté dans son circuit un système de récompense monétaire qui a conduit à la semi-professionnalisation du jeu ainsi que la retransmission des plus grands tournois, attirant de nombreux sponsors.</p>
             </div>
@@ -248,7 +249,7 @@
 
                 Voici l'agenda de notre ligue Pokémon :</p>
 
-                <center><iframe src="https://calendar.google.com/calendar/embed?src=hg1uk85j485dog5m7pg432a4u8%40group.calendar.google.com&ctz=Europe%2FKiev" style="border: 0" width="500" height="300" frameborder="0" scrolling="no" class="text-center"></iframe></center>
+                <center><iframe src="https://calendar.google.com/calendar/b/3/embed?height=600&amp;wkst=2&amp;bgcolor=%23D50000&amp;ctz=Europe%2FZurich&amp;src=cG9rZW1vbi50Y2cuZ2VuZXZlQGdtYWlsLmNvbQ&amp;color=%23039BE5&amp;showNav=1&amp;showPrint=0&amp;showTabs=1&amp;showCalendars=0&amp;showTz=0&amp;showDate=0&amp;showTitle=1&amp;title=Ligue%20Pok%C3%A9mon%20de%20Gen%C3%A8ve" style="border:solid 1px #777" width="500" height="300" frameborder="0" scrolling="no"></iframe></center>
             </div>
         </div>      
     </div>  
@@ -261,9 +262,9 @@
             <div class="col">
                 <p>La ligue Pokémon de Genève est bien plus qu’un évènement, c’est une communauté de joueurs unis avec pour but de représenter Genève avec fierté lors des tournois, qu’ils soient en Suisse, en Europe ou bien n’importe où dans le monde !<br><br>
 
-                Plusieurs joueurs genevois ont déjà brillé au plus haut niveau à plusieurs reprises avec trois joueurs genevois ayant déjà participé au moins une fois aux championnats du monde.<br><br>
+                Plusieurs joueurs Genevois ont déjà brillé au plus haut niveau à plusieurs reprises, trois joueurs Genevois ayant déjà participé au moins une fois aux championnats du monde.<br><br>
 
-                En outre, le genevois Gabriel fut le tout premier Suisse de l’histoire à atteindre la phase à élimination directe lors d’un championnat du monde !<br><br>
+                En outre, le Genevois Gabriel fut le tout premier Suisse de l’histoire à atteindre la phase à élimination directe lors d’un championnat du monde !<br><br>
 
                 Rejoignez la ligue Pokémon de Genève et continuez à bâtir son histoire glorieuse !
                 </p>
@@ -287,7 +288,7 @@
         </div>      
     </div>
     <div class="container-fluid bg3 text-center">
-        <i class="creator-name">Rafael Pacheco©</i>
+        <i class="creator-name">Rafael Pacheco ©</i>
     </div>
     <script>
         $(document).ready(function(){
