Added information about covid 19 suspension

--- a/index.html
+++ b/index.html
@@ -69,7 +69,14 @@
         background: #2c2e2c;
         opacity: 0.9;     
         padding: 28px 50px 20px 30px;
-    }  
+    }
+
+    .bg-alerte {
+        background: red;
+        opacity: 0.9;
+        margin-bottom: 30px;   
+        padding: 5px 5px 5px 5px;     
+    }
     
     .logo {
         width: 200px;
@@ -235,6 +242,7 @@
     </div>  
     <div id="ligue" class="container-fluid bg2">
         <h2 class="display-4 text-center">La ligue</h2>
+        <center><p class="bg-alerte text-center">En raison de l'épidémie Covid-19, la ligue est temporairement suspendue.</p></center>
         <div class="row">
             <div class="col">
                 <p>La ligue Pokémon de Genève se consacre uniquement au jeu de cartes et est l’endroit idéal pour rencontrer d’autres joueurs Pokémon, tester de nouveaux decks et se préparer pour les tournois de plus grande envergure !<br><br>
