--- a/index.html
+++ b/index.html
@@ -247,8 +247,7 @@
                 <p>La ligue Pokémon de Genève se consacre uniquement au jeu de cartes et est l’endroit idéal pour rencontrer d’autres joueurs Pokémon, tester de nouveaux decks et se préparer pour les tournois de plus grande envergure !<br><br>
 
                 La ligue se déroule régulièrement à l’adresse suivante :</p>
-                <center><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2761.2456551264104!2d6.099624315582445!3d46.20556797911667!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0!2zNDbCsDEyJzIwLjAiTiA2wrAwNicwNi41IkU!5e0!3m2!1sfr!2snl!4v1633509469715!5m2!1sfr!2snl" width="500" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" class="text-center"></iframe></center>-->
-                <!--<center><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5482.867741582459!2d6.140355170634832!3d46.204496232381445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c65263ed90abd%3A0xd7dde87f6173c04e!2sEdward&#39;s%20Mont-Blanc!5e0!3m2!1sfr!2sua!4v1584511688426!5m2!1sfr!2sua" width="500" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" class="text-center"></iframe></center>-->
+                <center><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5482.867741582459!2d6.140355170634832!3d46.204496232381445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c65263ed90abd%3A0xd7dde87f6173c04e!2sEdward&#39;s%20Mont-Blanc!5e0!3m2!1sfr!2sua!4v1584511688426!5m2!1sfr!2sua" width="500" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" class="text-center"></iframe></center>
             </div>
             <div class="col">
                 <p>Vous êtes la bienvenue quel que soit votre degré d'expérience et votre âge !<br>
